# LIMS-FermiMix

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  configuration.yaml
configuration/: base.yaml  production.yaml
db/: init.sql
migrations/: 20240224132903_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
sql/: init.sql
src/: configuration.rs  email_client.rs  lib.rs  main.rs  model.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
